--- a/ChatApp/app/src/main/res/values/dimens.xml
+++ b/ChatApp/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="chat_padding">10dp</dimen>
+    <dimen name="image_width">48dp</dimen>
+    <dimen name="image_height">48dp</dimen>
+    <dimen name="widget_default_width">40dp</dimen>
+    <dimen name="widget_default_height">40dp</dimen>
 </resources>
