--- a/ChatApp/app/src/main/res/menu/chat_menu.xml
+++ b/ChatApp/app/src/main/res/menu/chat_menu.xml
@@ -2,12 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <!-- <item
-        android:id="@+id/action_camera"
-        android:orderInCategory="102"
-        android:title="@string/action_camera"
-        android:icon="@drawable/ic_action_camera"
-        app:showAsAction="always" /> -->
+    <item android:id="@+id/search"
+        android:title="@string/search_title"
+        android:icon="@drawable/search_white"
+        app:showAsAction="collapseActionView|ifRoom"
+        app:actionViewClass="android.support.v7.widget.SearchView" />
 
     <item
         android:id="@+id/action_logout"
