--- a/ChatApp/app/src/main/res/menu/menu_main.xml
+++ b/ChatApp/app/src/main/res/menu/menu_main.xml
@@ -10,6 +10,13 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/action_show_map"
+        android:title="@string/show_map_action"
+        android:orderInCategory="102"
+        app:showAsAction="never" />
+
+
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="103"
         android:title="@string/action_logout"
